--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -17,7 +17,7 @@
         <%= image_tag "https://p0.cineserie.com/www.cineserie.com/wp-content/uploads/2019/10/avatar-les-suites-du-film-de-james-cameron-ne-seront-pas-en-3d-1.jpg?resize=330%2C330&ssl=1&ver=1", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "profil", "#", class: "dropdown-item" %>
-          <%= link_to "deconnexion", "#", class: "dropdown-item" %>
+          <%= link_to "deconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
       </li>
     </ul>
