--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -6,6 +6,7 @@
     <p>Hey ! <br>Et si on t'aidait à trouver</p>
     <h3>TON JOB <span style="background-color: darkcyan">  SAISONNIER</span> ?</h3>
     <div class="banner-button d-flex justify-content-center">
+      <%= link_to "C'est parti !", new_preference_path(step: 1), class: "btn-gradient" %>
       <button type="button" class="btn-gradient">C'est parti !</button>
     </div>
   </div>
