--- a/app/assets/stylesheets/pages/_new-preference.scss
+++ b/app/assets/stylesheets/pages/_new-preference.scss
@@ -1,15 +1,15 @@
-
-
+.header-page {
+  background: -webkit-linear-gradient(top left, #364156 50%, #F8F9FA 50%);
+  background: -o-linear-gradient(top left, #364156 50%, #F8F9FA 50%);
+  background: linear-gradient(to bottom right, #364156 50%, #F8F9FA 50%);
+  height: 300px;
+}
 .head-quizz h1 {
   font-family: 'Rancho', cursive;
   font-size: 56px;
 }
 .head-quizz {
-  transform: rotate(-20deg);
-}
-
-.cat-mer {
-  background-image: image_tag("cat-mer.png");
+  transform: rotate(-15deg);
 }
 
 .quizz a, p {
@@ -24,9 +24,8 @@
   max-height: 200px;
 }
 
-
 .quizz-layout {
-  margin-top: 20%;
+  margin-top: 200px;
 }
 
 .quizz:hover {
