--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,1 +1,12 @@
 
+<div class="footer">
+    <div class="footer-menu d-flex justify-content-center">
+      <div class="logo">
+        <p><span>O</span>pen <span>S</span>eason - 2019</p>
+      </div>
+    </div>
+    <div class="copyright">
+      <i class="fa fa-copyright">
+      </i> Une réalisation OST - 2019 at Le Wagon
+    </div>
+</div>
