--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,7 +19,7 @@
   padding-bottom: 16px;
   border-bottom: 1px solid;
 }
-.navbar .nav-item .dropdown {
+.dropdown-menu .dropdown-item {
   color: black;
 }
 
