--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-openseason">
+<div class=" navbar navbar-expand-sm navbar-openseason">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
@@ -16,8 +16,12 @@
       <li class="nav-item dropdown">
         <%= image_tag "https://p0.cineserie.com/www.cineserie.com/wp-content/uploads/2019/10/avatar-les-suites-du-film-de-james-cameron-ne-seront-pas-en-3d-1.jpg?resize=330%2C330&ssl=1&ver=1", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "profil", "#", class: "dropdown-item" %>
-          <%= link_to "deconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          <% if user_signed_in? %>
+            <%= link_to "Profil", profil_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Deconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          <% else %>
+            <%= link_to "Connexion", new_user_session_path, class: "dropdown-item" %>
+          <% end %>
         </div>
       </li>
     </ul>
