--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -1,47 +1,46 @@
-<div class="container" style="background-color: red">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1> Mon espace personnel </h1>
-      <div class="dashboard d-flex py-5 px-5" style="background-color: black">
-        <div class="row py-5 px-5">
-          <div class="contact col-xs-12 col-lg-6" style="background-color: blue">
-            <div class="photo row py-5 px-5" style="background-color: lightblue">
-              <div class="col-xs-6 py-5 px-5">
-                <img src="" alt="">
-               <p>lambersart</p>
-              </div>
-            </div>
-            <div class="row py-5 px-5" style="background-color: lightblue">
-              <div class="info col-xs-6">
-              </div>
+<div class="container-show">
+  <div class="col-xs-12">
+    <h1> Mon espace personnel </h1>
+    <div class="dashboard d-flex py-5 px-5" style="background-color: black">
+      <div class="row py-5 px-5">
+        <div class="contact col-xs-12 col-lg-6" style="background-color: blue">
+          <div class="photo row py-5 px-5" style="background-color: lightblue">
+            <div class="col-xs-6 py-5 px-5">
+              <img src="" alt="">
+             <p>lambersart</p>
             </div>
           </div>
-          <div class="work col-xs-12 col-lg-6" style="background-color: yellow">
-            <div class="row py-5 px-5">
-              <div class="col-xs-6">
-
-                <% if current_user == @user %>
-                  <div class="mission d-flex" style="background-color: lightyellow">
-                    <div class="favorite py-5 py-5">
-                      <p> mes annonces favorites </p>
-                    </div>
-                    <div class="my-mission py-5 px-5">
-                      <p>mes candidatures</p>
-                    </div>
-                  </div>
-                <% end %>
-
-              </div>
+          <div class="row py-5 px-5" style="background-color: lightblue">
+            <div class="info col-xs-6">
             </div>
-            <div class="row py-5 px-5">
-              <div class="col-xs-6">
-                <div class="work-experiences" style="background-color: orange">
-                  <p> mes experience, scrap linkedikn</p>
+          </div>
+        </div>
+        <div class="work col-xs-12 col-lg-6" style="background-color: yellow">
+          <div class="row py-5 px-5">
+            <div class="col-xs-6">
+
+              <% if current_user == @user %>
+                <div class="mission d-flex" style="background-color: lightyellow">
+                  <div class="favorite py-5 py-5">
+                    <p> mes annonces favorites </p>
+                  </div>
+                  <div class="my-mission py-5 px-5">
+                    <p>mes candidatures</p>
+                  </div>
                 </div>
+              <% end %>
+
+            </div>
+          </div>
+          <div class="row py-5 px-5">
+            <div class="col-xs-6">
+              <div class="work-experiences" style="background-color: orange">
+                <p> mes experience, scrap linkedikn</p>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
   </div>
 </div>
