--- a/app/views/components/_card.html.erb
+++ b/app/views/components/_card.html.erb
@@ -12,30 +12,30 @@
   <div class="right-side">
     <h2><%= job.title %></h2>
     <%= job.description %>
-  </div>
+</div>
 </div> -->
 
-<div class="container row title mt-4 mb-3 pl-3 pr-3 pb-2">
-  <div class="job-container">
-    <div class="upper-side d-flex justify-content-around">
-      <div class="job-logo">
-        <% if job.logo == "" %>
+
+<div class="job-container mb-3">
+  <div class="upper-side d-flex justify-content-around">
+    <div class="job-logo">
+      <% if job.logo == "" %>
         <%= image_tag "missing_logo.png" %>
-        <% else %>
+      <% else %>
         <%= image_tag job.logo %>
       <% end %>
+    </div>
+      <div class="text-elements flex-column">
+        <h4 class="job-title text-center"><%=job.title%></h4>
+        <p class="job-description text-center"><%=job.description%></p>
       </div>
-        <div class="text-elements flex-column">
-          <h4 class="job-title text-center"><%=job.title%></h4>
-          <p class="job-description text-center"><%=job.description%></p>
-        </div>
-    </div>
-    <div class="lower-side d-flex justify-content-around mt-3 mb-3">
-      <div class="fontawesome-icon"><i class="fas fa-map-marker-alt"></i> <%=job.address%></div>
-      <div class="btn btn-success">OUI</div>
-    </div>
+  </div>
+  <div class="lower-side d-flex justify-content-around mt-3">
+    <div class="location"><i class="fas fa-map-marker-alt"></i> <%=job.zip_code_and_city %></div>
+    <%= link_to "Book now", "#", class: "btn btn-flat" %>
   </div>
 </div>
+
 
 <!-- TENTATIVE -->
 
