--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,11 +2,18 @@
 <div class="main">
   <div class="wrapper">
     <div class="row">
-      <% @jobs.sample(4).each do |job| %>
-        <div class="col-xs-12 col-md-6">
-          <%= render 'components/card', job: job %>
+      <div class="col-12 col-xl-6">
+        <div class="job-containers">
+          <% @jobs.sample(4).each do |job| %>
+            <div class="">
+              <%= render 'components/card', job: job %>
+            </div>
+          <% end %>
         </div>
-      <% end %>
+      </div>
+      <div class="col-12 col-xl-6">
+        map
+      </div>
     </div>
   </div>
 </div>
