un coup pour rien

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,7 +19,7 @@
   padding: 5px 25px;
   border-radius: 4px;
   background-image: url("button.png");
-
+  text-align : right;
   transition: background 0.3s ease;
 }
 
