--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,12 +18,13 @@
   color: white;
   padding: 5px 25px;
   border-radius: 4px;
-  background-image: url("button.png");
-  text-align : right;
+  background-color: #499EAA;
   transition: background 0.3s ease;
+  font-family: 'Montserrat';
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .btn-flat:hover {
-  background: #1BCB7F;
+  background: #66BECB;
   color: white;
 }
