--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,7 @@
+.row {
+      margin-right: 3px;
+}
+
 .container {
   display: flex;
   overflow: hidden;
@@ -15,7 +19,7 @@
   min-height: 250px;
   min-width: 350px;
   max-width: 329px;
-  background-color: #F9F8F8;;
+  background-color: #F9F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
   border-radius: 5px;
