--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,7 +2,7 @@
 <div class="main">
   <div class="wrapper">
     <div class="row">
-      <div class="col-12 col-xl-6">
+      <div class="col-xs-12 col-xl-6">
         <div class="job-containers">
           <% @jobs.sample(4).each do |job| %>
             <div class="">
@@ -11,7 +11,7 @@
           <% end %>
         </div>
       </div>
-      <div class="col-12 col-xl-6">
+      <div class="col-xs-12 col-xl-6">
         map
       </div>
     </div>
