--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -1,10 +1,13 @@
 .container {
-
   margin-top: 70px;
   background-color: #F9F8F8;
   border-radius: 3px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  min-height: calc(100vh - 90px);
+  // margin-left: 50px;
+  // margin-right: 50px;
 }
+
 
 .container p {
   color: black;
@@ -113,10 +116,6 @@ font-size : 12px;
 }
 
 
-min-height: calc(100vh - 90px);
-margin-left: 50px;
-margin-right: 50px;
-}
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 48px;
@@ -124,6 +123,7 @@ h1 {
   text-align:center;
   color: #405F76;
 }
+
 .contact {
 
 }
