--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,11 +21,10 @@
   </div>
 
   <div class="right-side">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud
-      exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
+    <p>Difficile de naviguer parmis tous les sites de recherches d'emplois
+      et de trouver rapidement LE job qui nous convient.
+      Grâce à notre algorithme révolutionnaire, trouvez en quelques instants une
+      sélection d'annonces qui vous correspondent.
     </p>
       <br>
       <br>
