--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class=" navbar navbar-expand-sm navbar-openseason">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
@@ -10,19 +10,18 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Messages", "#", class: "nav-link" %>
-      </li>
-      <li class="nav-item dropdown">
-        <%= image_tag "https://p0.cineserie.com/www.cineserie.com/wp-content/uploads/2019/10/avatar-les-suites-du-film-de-james-cameron-ne-seront-pas-en-3d-1.jpg?resize=330%2C330&ssl=1&ver=1", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% if user_signed_in? %>
-            <%= link_to "Profil", profil_path(current_user), class: "dropdown-item" %>
-            <%= link_to "Deconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          <% else %>
-            <%= link_to "Connexion", new_user_session_path, class: "dropdown-item" %>
-          <% end %>
-        </div>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Profil", profil_path(current_user), class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Deconnexion", destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
       </li>
     </ul>
   </div>
