--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -66,6 +66,7 @@ h1 {
   box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
   background-color: #F9F8F8;
   border-radius: 7px;
+}
 
 .favorite-jobs {
   height:   185px;
@@ -96,12 +97,12 @@ h1 {
   box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .2);
   background-color: #F9F8F8;
   border-radius: 7px;
+}
 
 .mission-jobs {
   height:   185px;
   width:    100%;
   overflow: auto;
-
 }
 .my-missions h3 {
   border-bottom: 1px solid #499EAA;
