added seeds to db

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,18 +13,16 @@
       <br>
       <br>
       <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud
-      exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
-  </div>
-
-  <div class="right-side">
     <p>Difficile de naviguer parmis tous les sites de recherches d'emplois
       et de trouver rapidement LE job qui nous convient.
       Grâce à notre algorithme révolutionnaire, trouvez en quelques instants une
-      sélection d'annonces qui vous correspondent.
+      sélection d'annonces qui vous correspondent.</p>
+  </div>
+
+  <div class="right-side">
+    <p>Rentrez en contact avec des employeurs saisonniers, trouvez l'annonce qui
+      vous correspond et échangez avec d'autres travailleurs saisonniers pour
+      arranger au mieux votre déplacement.
     </p>
       <br>
       <br>
