--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -4,10 +4,16 @@
     <div class="row">
       <div class="col-xs-12 col-xl-6">
         <div class="job-containers">
-          <% @jobs.first(4).each do |job| %>
-            <div class="">
-              <%= render 'components/card', job: job %>
-            </div>
+          <% if @jobs.empty? %>
+            <div class="head-quizz">
+              Désolé, nous n'avons pas d'offre correspondant.
+              <%= link_to "Spin the wheel!", jobs_path, :class => "btn-flat" %>
+          <% else %>
+            <% @jobs.first(4).each do |job| %>
+              <div class="">
+                <%= render 'components/card', job: job %>
+              </div>
+            <% end %>
           <% end %>
         </div>
       </div>
