--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,7 +29,7 @@
   padding: 5px 25px;
   border-radius: 4px;
   background-color: #499EAA;
-  transition: background 0.3s ease;
+  transition: background 0.2s ease;
   font-family: 'Montserrat';
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -38,3 +38,7 @@
   background: #66BECB;
   color: white;
 }
+
+.animoBorderLeftRight{display:inline-block;position:relative;cursor:pointer;margin-right: 15px;color:white;text-decoration:none;}
+.animoBorderLeftRight::after{content:'';position:absolute;width:100%;transform:scaleX(0);height:2px;bottom:0;left:0;background-color:#f39c12;transform-origin:bottom right;transition:transform .4s cubic-bezier(.86,0,.07,1);}
+.animoBorderLeftRight:hover::after{transform:scaleX(1);transform-origin:bottom left;}
