--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -12,14 +12,14 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Profil", profil_path(current_user), class: "nav-link" %>
+          <%= link_to "PROFIL", profil_path(current_user), class: "animoBorderLeftRight" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Deconnexion", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <%= link_to "DÉCONNEXION", destroy_user_session_path, method: :delete, class: "animoBorderLeftRight" %>
         </li>
         <% else %>
         <li class="nav-item">
-          <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
+          <%= link_to "CONNEXION", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
       </li>
