--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -71,7 +71,7 @@
             </div>
             <div class="buttons">
             <%= link_to "Sauvegarder", job_favorites_path(job_id: @job.id), method: :post, :class => "btn-flat" %>
-            <%= link_to "Postuler", new_job_mission_path(@job), :class => "btn-flat" %>
+            <%= link_to "Postuler", job_missions_path(@job), method: :post, :class => "btn-flat" %>
             </div>
           </div>
         </div>
